Prevent page from jumping on initial click after selecting crop tool

--- a/static/less/admin/apps/sites/editor/editor.less
+++ b/static/less/admin/apps/sites/editor/editor.less
@@ -492,3 +492,10 @@ div.change-image {
     margin-bottom: 0;
   }
 }
+
+/* Jcrop overrides - will prevent pagejump that occurs when Jcrop keymanager get focus */
+
+.jcrop-keymgr {
+  position: absolute !important;
+  display: none !important;
+}
